# BIGpluginMitsuba

./: .gitignore  LICENSE  LICENSE-3RD-PARTY  README.md  big_render.cpp  bigbtf.cpp  materials.xml  scene.xml  test.xml
BIG/: CMakeLists.txt  LICENSE  LICENSE-3RD-PARTY.txt  README.md
BIG/doc_src/: big.tex  img.pptx
BIG/include/: big_cache.hpp  big_cache_read.hpp  big_consts.hpp  big_core_base.hpp  big_core_read.hpp  big_core_read_info.hpp  big_core_write.hpp  big_read_at_once.hpp
BIG/model/: createUtility.md  definitions.md  writeAndModify.md  xmlUtility.md
BIG/profile/: Profile.cpp  testCoreRead_GetImage1.big  testCoreRead_GetImage2.big  testCoreRead_GetImage3.big
BIG/src/: big_cache.cpp  big_cache_read.cpp  big_core_base.cpp  big_core_read.cpp  big_core_read_info.cpp  big_core_write.cpp  big_read_at_once.cpp  pugixml.cpp
BIG/tests/: big_core_read_info_test.cpp  big_core_read_test.cpp  big_core_test.cpp  big_core_write_test.cpp  common.cpp  common.hpp  conversion.cpp  main.cpp
MIFlib/: LICENSE  LICENSE-3RD-PARTY  README.md
MIFlib/ext/ImageLibrary/: LICENSE
MIFlib/include/: Attributes.hpp  BTFtree.hpp  Element.hpp  ElementArea.hpp  ElementBtf.hpp  ElementColors.hpp  ElementDevice.hpp  ElementDirection.hpp  ElementDirections.hpp  ElementDirectionsInfo.hpp  ElementDirectionsItem.hpp  ElementImage.hpp  ElementIndexMap.hpp  ElementMaterial.hpp  ElementMipmap.hpp  ElementMipmapItem.hpp  ElementTimestamps.hpp  MIF.hpp  MIFbtf.hpp  TreeXML.hpp
MIFlib/include/ext/: Array4D.hpp  Image.hpp
MIFlib/lib/: pugixml.lib  pugixmld.lib
MIFlib/src/: Attributes.cpp  BTFtree.cpp  Element.cpp  ElementArea.cpp  ElementBtf.cpp  ElementColors.cpp  ElementDevice.cpp  ElementDirection.cpp  ElementDirections.cpp  ElementDirectionsInfo.cpp  ElementDirectionsItem.cpp  ElementImage.cpp  ElementIndexMap.cpp  ElementMaterial.cpp  ElementMipmap.cpp  ElementMipmapItem.cpp  ElementTimestamps.cpp  MIF.cpp  MIFbtf.cpp  TreeXML.cpp
MIFlib/test/: MIF_test.cpp  MIFbtf_test.cpp
MIFlib/vs2015/: MIFlib.sln
MIFlib/vs2015/MIFlib/: MIFlib.vcxproj  MIFlib.vcxproj.filters
MIFlib/vs2015/MIFlibTest/: MIFlibTest.vcxproj  MIFlibTest.vcxproj.filters
MIFlib/vs2015/pugixml/: pugixml.vcxproj  pugixml.vcxproj.filters
bigplugin/: TAlloc.cpp  TAlloc.h  TCubeMap.cpp  TCubeMap.h  big_render.cpp  big_render.hpp  bigbtf.cpp
bigplugin/ext/: TCubeMap.cpp
bigplugin/ext/lib/Release/: PNGlib.lib
bigplugin/include/: readpng.h
bigplugin/lib/Debug/: PNGlib.lib
meshes/: Cube.ply  Sphere.ply
